Custom Workflow Action completa: Configuración avanzada con iframe, campos de entrada/salida completos, y integración OAuth HubSpot con datos reales (App ID: 18116720)

--- a/deployment/easypanel-services.json
+++ b/deployment/easypanel-services.json
@@ -48,7 +48,7 @@
       "name": "automaticpdf-backend",
       "type": "app",
       "source": "github",
-      "repository": "TU-USUARIO/hubspot-pdf-generator",
+      "repository": "Samuelbf2001/apppdf",
       "branch": "main",
       "build_context": "./backend",
       "dockerfile": "Dockerfile",
@@ -67,10 +67,12 @@
         "DATABASE_URL": "postgresql://automaticpdf_user:PASSWORD_POSTGRES@automaticpdf-postgres:5432/automaticpdf_db?schema=public",
         "REDIS_URL": "redis://:PASSWORD_REDIS@automaticpdf-redis:6379",
         "GOTENBERG_URL": "http://automaticpdf-gotenberg:3000",
-        "HUBSPOT_CLIENT_ID": "CONFIGURAR_CON_HUBSPOT",
-        "HUBSPOT_CLIENT_SECRET": "CONFIGURAR_CON_HUBSPOT", 
+        "HUBSPOT_APP_ID": "18116720",
+        "HUBSPOT_CLIENT_ID": "0e22d21f-c6ea-42d5-a7a5-128878342183",
+        "HUBSPOT_CLIENT_SECRET": "be54f2da-9879-4e44-b945-82beb7fdb41d", 
         "HUBSPOT_REDIRECT_URI": "https://automaticpdfhub.cloud/api/auth/hubspot/callback",
-        "JWT_SECRET": "GENERAR_SECRET_32_CARACTERES",
+        "JWT_SECRET": "automaticpdfhub-jwt-secret-super-secure-2024-hubspot-generator",
+        "ENCRYPTION_KEY": "automaticpdfhub-encryption-key-32ch",
         "STORAGE_PATH": "/app/storage",
         "FILE_BASE_URL": "https://automaticpdfhub.cloud/files",
         "DOCUMENT_CONCURRENCY": "3",
@@ -84,7 +86,7 @@
       "name": "automaticpdf-frontend",
       "type": "app", 
       "source": "github",
-      "repository": "TU-USUARIO/hubspot-pdf-generator",
+      "repository": "Samuelbf2001/apppdf",
       "branch": "main",
       "build_context": "./frontend",
       "dockerfile": "Dockerfile", 
