--- a/config/production.env
+++ b/config/production.env
@@ -1,110 +1,67 @@
-# ===============================================
-# CONFIGURACIÓN DE PRODUCCIÓN
-# HubSpot PDF Generator
-# ===============================================
+# === HUBSPOT OAUTH CONFIGURATION ===
+# Datos oficiales de la aplicación HubSpot AutomaticPDFHub
+HUBSPOT_APP_ID=18116720
+HUBSPOT_CLIENT_ID=0e22d21f-c6ea-42d5-a7a5-128878342183
+HUBSPOT_CLIENT_SECRET=be54f2da-9879-4e44-b945-82beb7fdb41d
+HUBSPOT_REDIRECT_URI=https://automaticpdfhub.cloud/auth/hubspot/callback
 
-# ====================================
-# CONFIGURACIÓN DEL SERVIDOR
-# ====================================
+# === APPLICATION CONFIGURATION ===
 NODE_ENV=production
-APP_PORT=3002
-FRONTEND_URL=https://tudominio.com
+APP_PORT=3001
+JWT_SECRET=automaticpdfhub-jwt-secret-super-secure-2024-hubspot-generator
+ENCRYPTION_KEY=automaticpdfhub-encryption-key-32ch
 
-# ====================================
-# CONFIGURACIÓN DE BASE DE DATOS
-# ====================================
-# PostgreSQL - Producción (usar servicio cloud recomendado)
-DATABASE_URL="postgresql://prod_user:secure_password@prod-db-host:5432/hubspot_pdf_prod_db?schema=public&sslmode=require"
+# === URLS ===
+FRONTEND_URL=https://automaticpdfhub.cloud
+BACKEND_URL=https://automaticpdfhub.cloud
+API_BASE_URL=https://automaticpdfhub.cloud/api
 
-# Redis - Producción (usar servicio cloud recomendado)
-REDIS_URL="rediss://prod-redis-user:secure_password@prod-redis-host:6380"
+# === DATABASE ===
+# PostgreSQL para producción (EasyPanel configurará automáticamente)
+DATABASE_URL=postgresql://automaticpdfhub:password@postgres:5432/automaticpdfhub
 
-# ====================================
-# CONFIGURACIÓN DE SEGURIDAD
-# ====================================
-# JWT Secret - DEBE SER ÚNICO Y SEGURO (min 32 caracteres)
-JWT_SECRET="production_jwt_secret_key_change_this_to_random_32_plus_characters"
+# === REDIS ===
+# Redis para colas y caché (EasyPanel configurará automáticamente)  
+REDIS_URL=redis://redis:6379
+REDIS_HOST=redis
+REDIS_PORT=6379
 
-# ====================================
-# CONFIGURACIÓN DE HUBSPOT
-# ====================================
-HUBSPOT_CLIENT_ID="prod_hubspot_client_id"
-HUBSPOT_CLIENT_SECRET="prod_hubspot_client_secret"
-HUBSPOT_REDIRECT_URI="https://tudominio.com/api/auth/hubspot/callback"
+# === GOTENBERG ===
+# Servicio de conversión PDF (EasyPanel configurará automáticamente)
+GOTENBERG_URL=http://gotenberg:3000
 
-# ====================================
-# CONFIGURACIÓN DE GOTENBERG
-# ====================================
-# URL del servicio Gotenberg en producción
-GOTENBERG_URL="http://gotenberg:3000"
+# === FILE STORAGE ===
+UPLOAD_PATH=/app/uploads
+MAX_FILE_SIZE=10485760
+MAX_JSON_SIZE=10mb
+MAX_URL_ENCODED_SIZE=10mb
 
-# ====================================
-# CONFIGURACIÓN DE ALMACENAMIENTO
-# ====================================
-# Usar almacenamiento en la nube en producción
-AWS_S3_BUCKET="tu-bucket-produccion"
-AWS_ACCESS_KEY_ID="tu_access_key_produccion"
-AWS_SECRET_ACCESS_KEY="tu_secret_key_produccion"
-AWS_REGION="us-east-1"
-
-# Path local como backup (en contenedor)
-STORAGE_PATH="/app/storage"
-FILE_BASE_URL="https://tudominio.com/files"
-
-# ====================================
-# CONFIGURACIÓN DE COLAS
-# ====================================
-DOCUMENT_CONCURRENCY=4
-HUBSPOT_CONCURRENCY=2
-QUEUE_MAX_ATTEMPTS=3
-QUEUE_BACKOFF_DELAY=5000
-
-# ====================================
-# CONFIGURACIÓN DE LOGGING
-# ====================================
-LOG_LEVEL="warn"
-ENABLE_REQUEST_LOGGING=false
-ENABLE_DB_LOGGING=false
-
-# ====================================
-# CONFIGURACIÓN DE RENDIMIENTO
-# ====================================
-# Rate limiting más estricto
+# === SECURITY ===
 RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX_REQUESTS=50
+RATE_LIMIT_MAX_REQUESTS=100
+AUTH_RATE_LIMIT_MAX=5
+CORS_ORIGIN=https://automaticpdfhub.cloud
 
-# Límites de archivos
-MAX_FILE_SIZE_MB=20
-MAX_UPLOAD_FILES=10
+# === LOGGING ===
+LOG_LEVEL=info
+LOG_FILE=/app/logs/app.log
 
-# ====================================
-# CONFIGURACIÓN DE PRODUCCIÓN
-# ====================================
-ENABLE_CORS=false
-ENABLE_HOT_RELOAD=false
-ENABLE_DEBUG_ROUTES=false
+# === HUBSPOT API ===
+HUBSPOT_API_KEY=
+HUBSPOT_BASE_URL=https://api.hubapi.com
 
-# ====================================
-# CONFIGURACIÓN DE MONITORING
-# ====================================
-# Sentry para tracking de errores
-SENTRY_DSN="https://tu_sentry_dsn@sentry.io/proyecto_id"
+# === QUEUE CONFIGURATION ===
+QUEUE_REDIS_URL=redis://redis:6379
+BULL_DASHBOARD_USERNAME=admin
+BULL_DASHBOARD_PASSWORD=automaticpdfhub2024
 
-# New Relic para monitoreo
-NEW_RELIC_LICENSE_KEY="tu_new_relic_license_key"
-NEW_RELIC_APP_NAME="HubSpot PDF Generator - Production"
+# === MONITORING ===
+ENABLE_METRICS=true
+METRICS_PORT=9090
 
-# ====================================
-# CONFIGURACIÓN DE EMAIL
-# ====================================
-SMTP_HOST="smtp.tuproveedor.com"
+# === EMAIL (opcional para notificaciones) ===
+SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USER="noreply@tudominio.com"
-SMTP_PASS="password_smtp_seguro"
-SMTP_FROM_EMAIL="noreply@tudominio.com"
-
-# ====================================
-# CONFIGURACIÓN DE WEBHOOKS
-# ====================================
-WEBHOOK_SECRET="webhook_secret_key_muy_seguro"
-WEBHOOK_ENDPOINT="/api/webhooks/hubspot"
+SMTP_USER=
+SMTP_PASS=
+FROM_EMAIL=noreply@automaticpdfhub.cloud
