CRITICAL FIX: Resolver conflicto AJV - Agregar dependencia ajv ^8.12.0 + resolutions/overrides + limpiar cache npm

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -34,8 +34,8 @@ ENV CI=true
 # Copiar package files
 COPY package*.json ./
 
-    # Instalar dependencias (con legacy-peer-deps para resolver conflictos de TypeScript)
-    RUN npm install --legacy-peer-deps
+    # Limpiar caché y instalar dependencias (con legacy-peer-deps para resolver conflictos de TypeScript)
+    RUN npm cache clean --force && npm install --legacy-peer-deps
 
 # Copiar código fuente
 COPY . .
