--- a/frontend/package.json
+++ b/frontend/package.json
@@ -71,10 +71,14 @@
   "proxy": "http://localhost:3001",
   "resolutions": {
     "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
+    "ajv-keywords": "^5.1.0",
+    "schema-utils": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.5.3"
   },
   "overrides": {
     "ajv": "^8.12.0",
-    "ajv-keywords": "^5.1.0"
+    "ajv-keywords": "^5.1.0",
+    "schema-utils": "^4.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.5.3"
   }
 }
