DEPLOY: Agregar Nginx reverse proxy para EasyPanel - Configuracion completa con rate limiting, security headers y routing optimizado

--- a/deployment/nginx-production.conf
+++ b/deployment/nginx-production.conf
@@ -216,9 +216,5 @@ server {
     }
 }
 
-# Redirección de www a dominio principal
-server {
-    listen 80;
-    server_name www.automaticpdfhub.cloud;
-    return 301 https://automaticpdfhub.cloud$request_uri;
-}
+# Configuración simplificada para EasyPanel
+# (SSL termination se maneja en EasyPanel nivel superior)
