--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,13 +9,15 @@
     "strict": false,
     "noImplicitAny": false,
     "strictNullChecks": false,
-    "forceConsistentCasingInFileNames": true,
+    "noImplicitReturns": false,
+    "noImplicitThis": false,
+    "forceConsistentCasingInFileNames": false,
     "module": "CommonJS",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
-    "declaration": true,
+    "declaration": false,
     "outDir": "./dist",
     "rootDir": "./src",
     "removeComments": true,
@@ -35,6 +37,15 @@
       "@/utils/*": ["utils/*"],
       "@/types/*": ["types/*"],
       "@/queue/*": ["queue/*"]
+    }
+  },
+  "ts-node": {
+    "transpileOnly": true,
+    "ignoreTypeErrors": true,
+    "compilerOptions": {
+      "strict": false,
+      "noImplicitAny": false,
+      "skipLibCheck": true
     }
   },
   "include": [
