--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -45,7 +45,7 @@ server {
 
     # Proxy para API del backend
     location /api/ {
-        proxy_pass http://backend:3002;
+        proxy_pass http://automaticpdf-backend:3002;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -63,7 +63,7 @@ server {
 
     # Proxy para archivos del backend
     location /files/ {
-        proxy_pass http://backend:3002;
+        proxy_pass http://automaticpdf-backend:3002;
         proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
