CRITICAL FIX: Agregar openssl1.1-compat para resolver error Prisma libssl.so.1.1

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -87,6 +87,7 @@ WORKDIR /app
 RUN apk add --no-cache \
     ca-certificates \
     tzdata \
+    openssl1.1-compat \
     && rm -rf /var/cache/apk/*
 
 # Configurar zona horaria
