URGENT FIX: Cambiar openssl1.1-compat por openssl-dev + libssl3 (Alpine 3.21 compatible)

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -87,7 +87,8 @@ WORKDIR /app
 RUN apk add --no-cache \
     ca-certificates \
     tzdata \
-    openssl1.1-compat \
+    openssl-dev \
+    libssl3 \
     && rm -rf /var/cache/apk/*
 
 # Configurar zona horaria
