--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
-    "start": "npx ts-node --transpile-only src/server.ts",
+    "start": "node dist/server.js",
+    "start:dev": "ts-node --transpile-only src/server.ts",
     "test": "jest",
     "test:watch": "jest --watch",
     "db:migrate": "npx prisma migrate dev",
