--- a/backend/package.json
+++ b/backend/package.json
@@ -44,7 +44,9 @@
     "@prisma/client": "^5.3.1",
     "prisma": "^5.3.1",
     "express-rate-limit": "^6.10.0",
-    "compression": "^1.7.4"
+    "compression": "^1.7.4",
+    "typescript": "^5.2.2",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^20.5.9",
@@ -55,8 +57,6 @@
     "@types/multer": "^1.4.7",
     "@types/uuid": "^9.0.4",
     "@types/compression": "^1.7.3",
-    "typescript": "^5.2.2",
-    "ts-node": "^10.9.1",
     "nodemon": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^6.5.0",
     "@typescript-eslint/parser": "^6.5.0",
